# configs.old

./: README.md  ansible.cfg  main.yaml  main.yml  playbook.yml  pyproject.toml  sync.sh
Xresources/: common  jdratlif-dev7
Xresources/themes/: darcula  dracula  papercolor-light
apt/: sources.list
bash/debian/: bash.bashrc  bash.profile  bash_aliases.sh
bash/rhel/: bash.bashrc  bash.profile
bash/rhel7/: bash.bashrc
git/htpc/: gitconfig
git/jdratlif-dev7/: gitconfig
git/nas/: gitconfig
group_vars/: all.yml  awx.yml  bastion.yml  bastion_grnoc.yml  bastion_nwave.yml  globalnoc.yml  puppet.yml
host_vars/: bastion.bldc.nwave.noaa.gov.yml  jdratlif-dev7.bldc.grnoc.iu.edu.yml  jdratlif-dev7.grnoc.iu.edu.yml  leap.grnoc.iu.edu.yml  puppet-stage2.grnoc.iu.edu.yml  puppet.grnoc.iu.edu.yml
i3/htpc/: i3status.conf
i3/jdratlif-dev7/: i3.conf  i3status.conf
i3/nas/: i3status.conf
i3/xenial/: i3status.conf
inventory/: generate.py  groups.yaml  hosts.yml  other.yaml
inventory/standard/: hosts.yaml
inventory/standard/group_vars/: all.yaml  (+15 more)
old_sync/: sync.sh
old_sync/Xresources/: common
old_sync/tmux/: z_common.conf
old_sync/vim/: htpc.vim
perltidy/: perltidyrc
qterminal/: jdratlif-dev7.ini
ssh/authorized_keys/: htpc
ssh/config/: bastion  buster  htpc  jdratlif-dev7  np-dev3  skip
sysctl/jdratlif-dev7/: sysctl.conf
tmux/: bastion  htpc  jump  skip
tmux/skip/: tmux.conf
vim/: common.vim  vimrc.vim  xenial.vim
vnc/buster/: xstartup.sh
vnc/common/: xstartup.sh
vnc/jdratlif-dev7/: xstartup.sh
zsh/rhel/: zsh.profile  zsh.zshrc
(+59 files in other folders)
